Migrate to reference architecture (Yorks0n/ZotWatch)
Major changes:
- Adopt Pydantic models for type safety (settings.py, models.py)
- Separate concerns: ingest_zotero_api.py, build_profile.py, storage.py
- Add dedupe.py with rapidfuzz fuzzy matching
- Enhanced scoring with SJR journal quality metrics (score_rank.py)
- Modular components: vectorizer.py, faiss_store.py, rss_writer.py, report_html.py
- Update config to use api_key_env format
- Simplify requirements.txt with core dependencies
- Delete old monolithic profile.py and watcher.py

Tests passed:
- watch command: 397 candidates → 389 after dedup → RSS + HTML generated
- New database schema working correctly
- GitHub Actions workflow compatible

--- a/config/sources.yaml
+++ b/config/sources.yaml
@@ -1,13 +1,19 @@
 window_days: 7
 openalex:
   enabled: false
-  mailto: "you@example.com"
+  mailto: "yuzuan94@gmail.com"
 crossref:
   enabled: true
-  mailto: "you@example.com"
+  mailto: "yuzuan94@gmail.com"
 arxiv:
   enabled: true
-  categories: ["q-bio.GN", "cs.LG"]
+  categories: 
+    - "q-bio.GN"
+    - "cs.LG"
+    - "cs.AI"      # 新增 AI
+    - "cs.CL"      # 新增 NLP
+    - "stat.ML"    # 新增统计学习
+  max_results: 100
 biorxiv:
   enabled: true
   from_days_ago: 7
